# konstrundan-2026

./: .gitignore  Makefile  index.html  package-lock.json  package.json  pyproject.toml
scripts/: extract_images.py  generate_descriptions.py  geocode_addresses.py  geocode_all_regions.py  mittskane_artists.json  nordvastra_artists.json  optimize_images.py  scrape_images.py  scrape_vskg.py  sydvastra_artists.json  vskg_artists.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/artist/[regionId]/[id]/: page.tsx
src/components/: ArtistList.tsx  ArtistPanel.tsx  Header.tsx  Map.tsx  RoutePlanner.tsx  SearchBar.tsx
src/data/: artists.ts  descriptions.json
src/data/regions/: mittskane.ts  nordvastra.ts  ostra.ts  sydvastra.ts  vastra.ts
src/lib/: types.ts  useDarkMode.ts  useFavorites.ts
